# pico

./: CMakeLists.txt
rnt/: picornt.cpp  picornt.h
rnt/cascades/: _eyesfinder  _facefinder  _mouthfinder  eyedet_m2_depth10_maxtree_30  mouth_gen_m1_depth10_maxtree_30
rnt/samples/native/: CMakeLists.txt  sample.cpp
